kube/gcp-experimental/paddle-ocr/paddle-ocr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paddle-ocr
  namespace: chunkmydocs
  labels:
    app.kubernetes.io/name: paddle-ocr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: paddle-ocr
  template:
    metadata:
      namespace: chunkmydocs
      labels:
        app.kubernetes.io/name: paddle-ocr
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - paddle-ocr
              topologyKey: "kubernetes.io/hostname"
      tolerations:
      - key: "nvidia.com/gpu.b"
        operator: "Exists"
        effect: "NoSchedule"
      - key: "nvidia.com/gpu"
        operator: "Exists"
        effect: "PreferNoSchedule"
      containers:
      - name: paddle-ocr
        image: luminainc/paddle-ocr:7ab34337
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
        ports:
        - containerPort: 8000
        securityContext:
          privileged: true
          capabilities:
            add: ["SYS_ADMIN"]
        resources:
          limits:
            nvidia.com/gpu: 1
          requests:
            nvidia.com/gpu: 1
        volumeMounts:
        - name: dshm
          mountPath: /dev/shm
      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
          sizeLimit: 5Gi
